add WIAD date in the logo

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 <header class="header">
 	<div class="row">
 		{% if page.section contains "home" %}
-			<p class="logo">{{ site.title }}</p>
+			<p class="logo">{{ site.title }}</br><span class="logo__date">Wereld IA dag: 15-02-2014</span></p>
 		{% else %}
-			<a href="{{ site.url }}/" class="logo">{{ site.title }}</a>
+			<a href="{{ site.url }}/" class="logo">{{ site.title }}</br><span class="logo__date">Wereld IA dag: 15-02-2014</span></a>
 		{% endif %}
 
 		<nav class="main-nav">
