--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
 	<div class="row">
-		<p>WIAD2014 is een werelwijd initiatief en in België zetten <a href="http://www.thesedays.com/" title="Nascom">These days</a>, <a href="http://www.nascom.be/" title="Nascom">Nascom</a>, <a href="http://istoireservices.be/" title="iStoire Services">iStoire Services</a> en <a href="http://wijs.be/nl" title="Wijs">Wijs</a> hun schouders onder de organisatie. Vragen of goesting om te sponsoren? <a href="mailto:info@informatiearchitectuur.be">Mail ons</a>.</p>
+		<p>WIAD2015 is een worldwide initiative but brought to you you in Belgium by <a href="http://www.thesedays.com/" title="Nascom">These days</a>, <a href="http://www.nascom.be/" title="Nascom">Nascom</a>, <a href="http://namahn.com/" title="iStoire Services">Namahn</a> en <a href="http://wijs.be/nl" title="Wijs">Wijs</a>. Questions or willing to be a sponsor? <a href="mailto:info@informatiearchitectuur.be">Contact us</a>.</p>
 	</div>
 	<div class="row">
 		<a href="http://getchopstick.com/" title="Made with Chopstick" class="chopstick">Made with Chopstick</a>
