--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
 				{% else %}
 				<li {% if page.url contains "index" %}class="selected"{% endif %}><a href="{{ site.url }}/index.html">Home</a></li>
 				{% endif %} 
-				<li {% if page.url contains "register" %}class="selected"{% endif %}><a href="{{ site.url }}/register.html">Inschrijven</a></li>
+				<li {% if page.url contains "register" %}class="selected"{% endif %}><a href="{{ site.url }}/register.html">Register</a></li>
 
 				<!--	<li {% if page.url contains "program" %}class="selected"{% endif %}><a href="{{ site.url }}/program.html">Programma</a></li>
 				<li {% if page.url contains "praktisch" %}class="selected"{% endif %}><a href="{{ site.url }}/praktisch.html">Praktisch</a></li>
