--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
 	<div class="row">
-		<p>WIAD2015 is a worldwide initiative but brought to you in Belgium by <a href="http://namahn.com/" title="Namahn">Namahn</a>, <a href="http://www.nascom.be/" title="Nascom">Nascom</a> and <a href="http://wijs.be/nl" title="Wijs">Wijs</a>. Questions or willing to be a sponsor? <a href="mailto:info@informatiearchitectuur.be">Contact us</a>.</p>
+		<p>WIAD2015 is a worldwide initiative but brought to you in Belgium by <a href="http://namahn.com/" title="Namahn">Namahn</a>, <a href="http://thesedays.com/" title="These Days">These Days Y&R</a> and <a href="http://wijs.be/nl" title="Wijs">Wijs</a>. Questions or willing to be a sponsor? <a href="mailto:info@informatiearchitectuur.be">Contact us</a>.</p>
 	</div>
 	<div class="row">
 		<a href="http://getchopstick.com/" title="Made with Chopstick" class="chopstick">Made with Chopstick</a>
